fix footer display on mobile

--- a/css/style-mobile.css
+++ b/css/style-mobile.css
@@ -170,19 +170,6 @@ body.contact #main {
 	padding-bottom: 0;
 }
 
-/* Footer */
-
-#footer {
-	padding: 3em 1.5em;
-}
-
-#footer .copyright li {
-	display: block;
-	margin: 1em 0 0 0;
-	padding: 0;
-	border: 0;
-}
-
 /* Wiki */
 
 #wiki-flex {
