--- a/css/style-narrower.css
+++ b/css/style-narrower.css
@@ -118,9 +118,3 @@ ul.buttons li {
 body.index #main {
 	padding-top: 4.5em;
 }
-
-/* Footer */
-
-#footer {
-	padding: 4em 1.5em;
-}
